fix: 修复大量兼容2023之后版本的兼容性问题